# lz4compress

./: CMakeLists.txt  LICENSE  README  README.md
lz4-r121/cmake_unofficial/: CMakeLists.txt
src/: compressor.cc  compressor.h  file.h  fs.h  job.cc  job.h  main.cc  utils.cc  utils.h
